--- a/index.css
+++ b/index.css
@@ -5,13 +5,13 @@
 body{
     height: 100vh;
     margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 h1{
     margin: 0;
     color: white;
     text-align: center;
     padding-top: 12%;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 36px;
 }
 #linklist{
@@ -22,10 +22,17 @@ h1{
    display: block;
    color: black;
    text-decoration: none;
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 20px;
+   padding-bottom: 40px;
+   text-align: center;
 } 
-   
+h2{
+    text-align: center;
+}
+.tuner{
+    padding-left: 35%;
+    color: white;
+} 
 .footer{
     position: fixed;
     left: 0;
@@ -36,11 +43,9 @@ h1{
     background-color: black;
     text-align: center;
     color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
 }
 .contact{
     color: white;
     font-size: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
