--- a/index.css
+++ b/index.css
@@ -3,17 +3,24 @@
     height: 50%;
 }
 body{
-    height: 100vh;
     margin: 0;
+    height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-bottom:0;
 }
 h1{
     margin: 0;
     color: white;
     text-align: center;
-    padding-top: 12%;
+    padding-top: 15%;
+    padding-bottom: 15px;
     font-size: 36px;
-    
+}
+html{
+    overflow: scroll;
+}
+h3{
+    text-align: center;
 }
 /* #Make a grid display of the list items */
 .russian-list{
@@ -45,7 +52,6 @@ h2{
     color: white;
 } 
 .footer{
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
