--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ h2{
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 10%;
+    height: 30%;
     padding-top: 2%;
     background-color: black;
     text-align: center;
@@ -65,4 +65,8 @@ h2{
 .contact{
     color: white;
     font-size: 20px;
+}
+
+.tips {
+    color: lightblue
 }
