adding beren info

--- a/index.css
+++ b/index.css
@@ -16,6 +16,11 @@ h1{
     padding-bottom: 15px;
     font-size: 36px;
 }
+/* .beren {
+    text-align: center;
+    max-width: 50px;
+    
+} */
 html{
     overflow: scroll;
     margin: 25px;
