--- a/saveukraine/src/Frequencies.css
+++ b/saveukraine/src/Frequencies.css
@@ -7,12 +7,21 @@ h1{
     text-align: center;
     font-size: 34px;
 }
-.header-text{
-    text-align: center;
+/* The Frequencies should should in a three column flex box in three rows*/
+.Frequencies{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 50;
+    padding: 4em;
+    margin: 3em;
 }
-.frequencies{
-    margin-left: 20%;
-    -webkit-column-count: 2;  /* Chrome/Opera, Safari */
-    -moz-column-count: 2; /* Mozilla Firefox */
-    column-count: 2;
+
+
+/* Display active frequencies in bold */
+.active{
+    font-weight: bold;
 }
+
+
